[project]
name = "ed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "azure-identity>=1.25.0",
  "azure-maps-search>=2.0.0b2",
  "fastexcel>=0.16.0",
  "googlemaps>=4.10.0",
  "polars>=1.34.0",
  "python-dotenv>=1.1.1",
  "requests>=2.32.5",
  "typer>=0.19.2",
  "xlsxwriter>=3.2.9",
]
